# fastavro-mypy-repro

./: README.md  mypy.ini  pyproject.toml  repro.py
